# ansible-tests

./: .gitignore  Makefile  README.md  ansible.cfg  container  pyproject.toml  requirements.txt
.github/workflows/: codacy.yml
images/: amazonlinux_2022.dockerfile  amazonlinux_2022.tag  amazonlinux_2023.dockerfile  amazonlinux_2023.tag
playbooks/: ruby-install.yml
roles/extensions/molecule/ruby-install/: converge.yml  create.yml  destroy.yml  molecule.yml
roles/ruby/handlers/: main.yml
roles/ruby/tasks/: main.yml
roles/ruby/tests/: test.yml
roles/tests/molecule/ruby-install/: molecule.yml
roles/utils/tasks/: docker-destroy-node.yml
scripts/: ansible  check-param  container  drop-node.sh  node.sh
