[tool.poetry]
name = "ansible-tests"
version = "0.1.0"
description = ""
authors = ["Diegiwg <diegiwg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "2.14.1"
ansible-lint = "5.4.0"
molecule = "5.0.1"
molecule-plugins = {version = "23.5.0", extras = ["docker"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
