[tool.poetry]
name = "ansible-tests"
version = "0.1.0"
description = ""
authors = ["Diegiwg <diegiwg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
ansible-core = "2.18.1"
molecule = "24.12.0"
molecule-plugins = "23.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
