[tool.poetry]
name = "ansible-tests"
version = "0.1.0"
description = ""
authors = ["Diegiwg <diegiwg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.2"
ansible-core = "2.17.7"
molecule = "24.12.0"
molecule-plugins = "23.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
